<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_product_name" />

    <EditText
        android:id="@+id/dialog_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_product_name" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_product_price" />

    <EditText
        android:id="@+id/dialog_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_product_price"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_product_category" />

    <Spinner
        android:id="@+id/dialog_product_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_product_supplier" />

    <Spinner
        android:id="@+id/dialog_product_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>